fix(contact): Add 'has-members' class to contact when members are selected. Add separate end screen logic.

--- a/src/index.html
+++ b/src/index.html
@@ -351,7 +351,7 @@
                 </div>
               </div>
 
-              <!-- End form -->
+              <!-- Overview -->
               <div class="contact-form__step">
                 <div class="contact-form__step-content">
                   <p>Great! You're all set!</p>
@@ -360,6 +360,15 @@
                   <div class="button button--primary submit-button is-hidden">Submit</div>
                 </div>
               </div>
+
+              <!-- End screen -->
+              <div class="contact-form__step">
+                <div class="contact-form__step-content">
+                  <h3 class="contact-form__step-end-title">Thanks for reaching out!</h3>
+                  <p>We'll be in touch with you shortly.</p>
+                </div>
+              </div>
+
               <div class="contact-form__step-nav is-hidden">
                 <!-- <div class="button button--tertiary button--arrow-left prev-step-button">Go back</div> -->
                 <a class="next-step-button">Continue to next step</a>
