feat(app): Add OpenGraph data.

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cursief</title>
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Cursief - Web design & development collective.">
+    <meta property="og:site_name" content="Cursief - Web design & development collective.">
+    <meta property="og:description" content="Cursief designs, builds and launches products for startups, established companies and ourselves. We help businesses grow through effective design and strategy.">
+    <meta property="og:url" content="https://cursief.co/">
+    <meta property="og:image" content="https://cursief.co/images/og-image.png">
     <link rel="stylesheet" href="https://use.typekit.net/bzx4plp.css">
     <link rel="stylesheet" href="style.css">
   </head>
