fix(members): Solve some Safari issues.

--- a/src/index.html
+++ b/src/index.html
@@ -251,16 +251,20 @@
                 <div class="contact-form__step-content">
                   <div class="contact-form__step-wrapper">
                     <h3 class="contact-form__step-title">Get in touch with your own team of superstars.</h3>
-                    <div class="team-overview is-hidden">
+
+                    <div class="team-overview">
                       <div class="team-overview__content">
                         <p class="team-overview__title"></p>
                         <div class="team-overview__members"></div>
                       </div>
                     </div>
+
                     <p>You can contact us through our interactive form or just send us an e-mail.</p>
                   </div>
+
                   <h3>How would you like to contact us?</h3>
                   <p>We recommend using the form, we promise it won't take long!</p>
+
                   <div class="selection-box">
                     <div class="selection-box__column">
                       <button class="button button--primary next-step-button">Answer a few questions</button>
@@ -376,7 +380,7 @@
               </div>
 
               <div class="contact-form__step-nav is-hidden">
-                <!-- <div class="button button--tertiary button--arrow-left prev-step-button">Go back</div> -->
+                <a class="prev-step-button">Go back</a>
                 <a class="next-step-button">Continue to next step</a>
               </div>
             </form>
