--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,17 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cursief</title>
+    <title>Cursief. Digital agency, but better. Front-end, back-end & web design.</title>
+    <meta name="description" content="Need a digital agency? We are a collective with webdesigners, front-end developers and back-end developers. Like a creative agency, we create websites and webapps.">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Cursief - Web design & development collective.">
     <meta property="og:site_name" content="Cursief - Web design & development collective.">
     <meta property="og:description" content="Cursief designs, builds and launches products for startups, established companies and ourselves. We help businesses grow through effective design and strategy.">
     <meta property="og:url" content="https://cursief.co/">
     <meta property="og:image" content="https://cursief.co/images/og-image.png">
+    <meta name="geo.region" content="NL-ZH">
+    <meta name="geo.placename" content="Rotterdam">
+    <meta name="geo.position" content="51.9228958;4.4631727">
     <link rel="stylesheet" href="https://use.typekit.net/bzx4plp.css">
     <link rel="stylesheet" href="style.css">
   </head>
