fix(contact): Update contact form styling and update UX for keyboard input.

--- a/src/index.html
+++ b/src/index.html
@@ -384,8 +384,8 @@
               </div>
 
               <div class="contact-form__step-nav is-hidden">
-                <a class="prev-step-button">Go back</a>
-                <a class="next-step-button">Continue to next step</a>
+                <button class="link-button next-step-button readmore">Continue to next step</button>
+                <button class="link-button prev-step-button">Go back</button>
               </div>
             </form>
           </div>
