feat(faq): Add styling to faq items.
fix(app): Rewrite some content.

--- a/src/faq.html
+++ b/src/faq.html
@@ -25,16 +25,16 @@
         <nav class="navigation">
           <ul class="navigation__list">
             <li class="navigation__item">
-              <a class="navigation__anchor" href="#introduction">Introduction</a>
+              <a class="navigation__anchor" href="index.html#introduction">Introduction</a>
             </li>
             <li class="navigation__item">
-              <a class="navigation__anchor" href="#members">Members</a>
+              <a class="navigation__anchor" href="index.html#members">Members</a>
             </li>
             <li class="navigation__item">
-              <a class="navigation__anchor" href="#clients">Clients &amp; Projects</a>
+              <a class="navigation__anchor" href="index.html#clients">Clients &amp; Projects</a>
             </li>
             <li class="navigation__item">
-              <a class="navigation__anchor" href="#contact">Contact us</a>
+              <a class="navigation__anchor" href="index.html#contact">Contact us</a>
             </li>
           </ul>
         </nav>
@@ -74,54 +74,70 @@
         <div class="section__container">
           <div class="faq">
             <div class="faq__column">
-              <h1 class="faq__heading">For members</h1>
+              <h2 class="faq__heading">For members</h2>
               <ul class="faq__list">
                 <li class="faq__item">
-                  <a class="faq__anchor" href="#">Are you a recruiter?</a>
+                  <input class="faq__toggle" id="faq-1" type="checkbox"/>
+                  <label class="faq__label" for="faq-1">Why should I become part of Cursief? <svg class="faq__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/></svg></label>
                   <div class="faq__content">
-                    <p>Absolutely not. You can call us a recruiter in the sense that we want to connect companies to people looking for work, but we won't be between you and the client and we don't ask any money from either side. You are a grown up, you can sell yourself better than any other person.</p>
+                    <p>Clients are not always looking for a single developer/designer/etc. What Cursief does is make it easier for them to find a team of people, with different skills, that work great together.</p>
+                    <p>Becoming a member is easy, we don't require stuff like signed contracts and minimum weekly/monthly working hours. Why wouldn't you want to increase the chance of getting work?</p>
                   </div>
                 </li>
                 <li class="faq__item">
-                  <a class="faq__anchor" href="#">Why should I become part of Cursief?</a>
+                  <input class="faq__toggle" id="faq-2" type="checkbox"/>
+                  <label class="faq__label" for="faq-2">Are you a recruiter? <svg class="faq__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/></svg></label>
                   <div class="faq__content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam alias necessitatibus vel corporis sed, delectus dolor. Aliquam, corrupti natus atque commodi ducimus voluptatem obcaecati dignissimos reiciendis placeat blanditiis, et qui.</p>
+                    <p>Absolutely not. You can call us a recruiter if you want, but the only similarity is that we want to connect companies to people looking for work. The main difference is we won't be between you and the client and we don't ask any money from either side.</p>
+                    <p>Cursief primarily got created because we got tired of recruiters not actually knowing anything about our professions, handling clients poorly and not representing our strenghts.</p>
                   </div>
                 </li>
                 <li class="faq__item">
-                  <a class="faq__anchor" href="#">What information do you need from me?</a>
+                  <input class="faq__toggle" id="faq-3" type="checkbox"/>
+                  <label class="faq__label" for="faq-3">What information do you need from me? <svg class="faq__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/></svg></label>
                   <div class="faq__content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam alias necessitatibus vel corporis sed, delectus dolor. Aliquam, corrupti natus atque commodi ducimus voluptatem obcaecati dignissimos reiciendis placeat blanditiis, et qui.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam alias necessitatibus vel corporis sed, delectus dolor. Aliquam, corrupti natus atque commodi ducimus voluptatem obcaecati dignissimos reiciendis placeat blanditiis, et qui.</p>
+                    <p>We need an image for on our website, your job/function title, your strengths, a small bio and a link to your portfolio. We always try to create a pool of people who are in sync with each other, so meeting in person and having a few chats is kind of necessary. We are looking for like-minded people with a passion for their work!</p>
                   </div>
                 </li>
                 <li class="faq__item">
-                  <a class="faq__anchor" href="#">Does this cost anything?</a>
+                  <input class="faq__toggle" id="faq-4" type="checkbox"/>
+                  <label class="faq__label" for="faq-4">Does this cost anything? <svg class="faq__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/></svg></label>
                   <div class="faq__content">
                     <p>Nope! Nothing, nada!</p>
+                    <p>We keep this easy and simple, so we don't have to charge anything.</p>
                   </div>
                 </li>
               </ul>
             </div>
             <div class="faq__column">
-              <h1 class="faq__heading">For clients</h1>
+              <h2 class="faq__heading">For <span>(potential)</span> clients</h2>
               <ul class="faq__list">
                 <li class="faq__item">
-                  <a class="faq__anchor" href="#">What is a collective?</a>
+                  <input class="faq__toggle" id="faq-5" type="checkbox"/>
+                  <label class="faq__label" for="faq-5">What is a collective? <svg class="faq__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/></svg></label>
                   <div class="faq__content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam alias necessitatibus vel corporis sed, delectus dolor. Aliquam, corrupti natus atque commodi ducimus voluptatem obcaecati dignissimos reiciendis placeat blanditiis, et qui.</p>
+                    <p>A collective can also be called a 'pool', it's a fancy name for a bunch of passionate people helping each other finding work and passing along any work they don't have the time for and knowledge of. Instead of constantly having to approach different people, asking if they are available and have the required knowledge, we make it easier to find exactly what you are looking for!</p>
                   </div>
                 </li>
                 <li class="faq__item">
-                  <a class="faq__anchor" href="#"></a>
+                  <input class="faq__toggle" id="faq-6" type="checkbox"/>
+                  <label class="faq__label" for="faq-6">Why shouldn't I hire everyone on my own? <svg class="faq__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/></svg></label>
                   <div class="faq__content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam alias necessitatibus vel corporis sed, delectus dolor. Aliquam, corrupti natus atque commodi ducimus voluptatem obcaecati dignissimos reiciendis placeat blanditiis, et qui.</p>
+                    <p>If you want to hire everyone on your own, go ahead, no one is stopping you. Using Cursief helps to create a single point for contacting, we make sure everyone you selected is available at the same time and if necessary we can help finding some else who fits better in your team. Let us do the work!</p>
                   </div>
                 </li>
                 <li class="faq__item">
-                  <a class="faq__anchor" href="#">What is a collective</a>
+                  <input class="faq__toggle" id="faq-7" type="checkbox"/>
+                  <label class="faq__label" for="faq-7">Who do I contact for the project?<svg class="faq__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/></svg></label>
                   <div class="faq__content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam alias necessitatibus vel corporis sed, delectus dolor. Aliquam, corrupti natus atque commodi ducimus voluptatem obcaecati dignissimos reiciendis placeat blanditiis, et qui.</p>
+                    <p>After your members are picked and submitted, we will contact all the members and between them they will decide who is going to be the primary contact for you. We want to prevent that you have to approach everyone seperately, that's something we take care of.</p>
+                  </div>
+                </li>
+                <li class="faq__item">
+                  <input class="faq__toggle" id="faq-8" type="checkbox"/>
+                  <label class="faq__label" for="faq-8">How does billing work? <svg class="faq__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/></svg></label>
+                  <div class="faq__content">
+                    <p>We won't be between you and the Cursief member(s), they will send you seperate invoices and you'll sign seperate contract with them.</p>
                   </div>
                 </li>
               </ul>
