--- a/src/index.html
+++ b/src/index.html
@@ -85,8 +85,11 @@
         <div class="section__container">
           <div class="section__column section__text">
             <h1>We are the web generation</h1>
-            <p class="section__description">Cursief is a pool of web-veterans with years of experience creating websites, webshops and webapps. Being bundled under one name gives us a lot of flexibility taking on small and large projects, our members scale depending on what you need for your company and project.</p>
-            <a class="readmore" href="#" title="Read more about what Cursief is">Read more</a>
+            <div class="section__description">
+              <p>Cursief is a pool of web-veterans with years of experience creating websites, webshops and webapps. Being bundled under one name gives us a lot of flexibility taking on small and large projects, our members scale depending on what you need for your company and project.</p>
+              <p>You probably still have a lot of questions right? We created an FAQ to answer all your burning questions.</p>
+            </div>
+            <a class="readmore" href="faq.html" title="Go to FAQ page">Visit our FAQ</a>
           </div>
           <div class="section__column section__media">
             <img src="images/introduction-o.svg" alt="">
