--- a/src/index.html
+++ b/src/index.html
@@ -249,8 +249,8 @@
         <div class="section__container">
           <h1>Contact us</h1>
           <div class="contact" data-step="0">
-<!--             <img class="contact__stamp contact__stamp--1" src="images/stamp-1.svg" alt="">
-            <img class="contact__stamp contact__stamp--2" src="images/stamp-2.svg" alt=""> -->
+            <img class="contact__stamp contact__stamp--1" src="images/stamp-1.svg" alt="">
+            <img class="contact__stamp contact__stamp--2" src="images/stamp-2.svg" alt="">
             <div class="contact__steps-overview"></div>
             <div class="contact-form">
               <!-- Start form -->
@@ -303,9 +303,17 @@
                   <h3 class="contact-form__step-title">2. Company</h3>
                   <p class="contact-form__question contact-form__question--optional">Are you contacting us on behalf of a company?</p>
                   <div class="required-group">
-                    <div class="contact-form__option"><input type="radio" id="contact-form_company-yes" name="contact-form_company" value="Yes" data-bind="contact-form_company-name"><label for="contact-form_company-yes">Yes</label></div>
-                    <div class="contact-form__option"><input type="radio" id="contact-form_company-no" name="contact-form_company" value="No" data-bind="contact-form_company-name"><label for="contact-form_company-no">No</label></div>
-                    <div class="contact-form__option"><input type="text" name="contact-form_company-name" placeholder="Company name goes here" data-active-if="Yes" disabled required></div>
+                    <div class="contact-form__option">
+                      <input type="radio" id="contact-form_company-yes" name="contact-form_company" value="Yes" data-bind="contact-form_company-name">
+                      <label for="contact-form_company-yes">Yes</label>
+                    </div>
+                    <div class="contact-form__option">
+                      <input type="radio" id="contact-form_company-no" name="contact-form_company" value="No" data-bind="contact-form_company-name">
+                      <label for="contact-form_company-no">No</label>
+                    </div>
+                    <div class="contact-form__option">
+                      <input class="contact-form__dependent" type="text" name="contact-form_company-name" placeholder="Company name goes here" data-active-if="Yes" disabled required>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -344,7 +352,7 @@
                   <p class="contact-form__question">What is your budget?</p>
                   <div class="contact-form__option">
                     <select name="" id="">
-                      <option value="Not yet defined">Not yet defined</option>
+                      <option value="Not yet selected">Not yet selected</option>
                       <option value="€ 500 - € 1.500">€ 500 - € 1.500</option>
                       <option value="€ 1.500 - € 4.000">€ 1.500 - € 4.000</option>
                       <option value="€ 4.000 - € 8.000">€ 4.000 - € 8.000</option>
@@ -361,9 +369,17 @@
                   <h3 class="contact-form__step-title">6. Deadline</h3>
                   <p class="contact-form__question">Have you set a deadline?</p>
                   <div class="required-group">
-                    <div class="contact-form__option"><input type="radio" id="contact-form_deadline-yes" name="contact-form_deadline" data-bind="contact-form_deadline-date" value="Yes"><label for="contact-form_deadline-yes">Yes</label></div>
-                    <div class="contact-form__option"><input type="radio" id="contact-form_deadline-no" name="contact-form_deadline" data-bind="contact-form_deadline-date" value="No"><label for="contact-form_deadline-no">No</label></div>
-                    <div class="contact-form__option"><input type="date" name="contact-form_deadline-date" data-active-if="Yes" disabled required></div>
+                    <div class="contact-form__option">
+                      <input type="radio" id="contact-form_deadline-yes" name="contact-form_deadline" data-bind="contact-form_deadline-date" value="Yes">
+                      <label for="contact-form_deadline-yes">Yes</label>
+                    </div>
+                    <div class="contact-form__option">
+                      <input type="radio" id="contact-form_deadline-no" name="contact-form_deadline" data-bind="contact-form_deadline-date" value="No">
+                      <label for="contact-form_deadline-no">No</label>
+                    </div>
+                    <div class="contact-form__option">
+                      <input class="contact-form__dependent" type="date" name="contact-form_deadline-date" data-active-if="Yes" disabled required>
+                    </div>
                   </div>
                 </div>
               </div>
