fix(faq): Add missing index.html to anchor.

--- a/src/faq.html
+++ b/src/faq.html
@@ -25,7 +25,7 @@
     </a>
     <header class="header header--primary">
       <div class="header__container">
-        <a class="header__logo" href="#home" title="Cursief web collective">
+        <a class="header__logo" href="index.html#home" title="Cursief web collective">
           <img src="images/logo.svg" alt="Cursief logo">
         </a>
         <nav class="navigation">
