--- a/src/index.html
+++ b/src/index.html
@@ -257,7 +257,7 @@
               <div class="contact-form__step contact__selection">
                 <div class="contact-form__step-content">
                   <div class="contact-form__step-wrapper">
-                    <h3 class="contact-form__step-title">Get in touch with your own team of superstars.</h3>
+                    <h3 class="contact-form__step-title">Get in touch with your selected team</h3>
 
                     <div class="team-overview">
                       <div class="team-overview__content">
@@ -265,8 +265,6 @@
                         <div class="team-overview__members"></div>
                       </div>
                     </div>
-
-                    <p>You can contact us through our interactive form or just send us an e-mail.</p>
 
                     <h3 class="contact-form__step-title">How would you like to contact us?</h3>
                     <p>We recommend using the form, we promise it won't take long!</p>
