--- a/src/index.html
+++ b/src/index.html
@@ -116,7 +116,7 @@
                 <h3 class="member__tags">Analytical & problem solver</h3>
               </div>
               <div class="member__description">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus qui molestiae, sint magni. Obcaecati, impedit, hic? Cupiditate ex, nihil facere ipsum culpa sapiente obcaecati numquam.
+                I'm a dedicated and loyal person, always looking for ways to improve myself and others in the process. I have a masters degree in language and culture.
               </div>
               <div class="member__footer">
                 <a class="member__anchor" title="Go to Gideon Heilbron's portfolio" href="https://gideonheilbron.nl" target="_blank" rel="noopener noreferrer">
@@ -163,42 +163,44 @@
                 </a>
               </div>
             </li>
-            <li class="member" role="button" tabindex="0">
+            <li class="member member--empty" role="button" tabindex="0">
               <div class="member__top">
                 <div class="member__avatar">
-                  <img src="images/avatar-murtada.jpg" alt="">
+                  <img src="" alt="">
                 </div>
-                <h1 class="member__name">Murtada <br>al Mousawy 2</h1>
-                <h2 class="member__title">Full-stack developer</h2>
-                <h3 class="member__tags">Smart & dedicated</h3>
+                <h1 class="member__name">Your face <br>here?</h1>
+                <h2 class="member__title"></h2>
+                <h3 class="member__tags"></h3>
               </div>
               <div class="member__description">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam.
+                <p>We are always on the lookout for new members to join Cursief!</p>
+                <p>Interested? Contact us at <strong>hello@cursief.co</strong> and check out our FAQ to answer most of your questions.</p>
               </div>
               <div class="member__footer">
-                <a class="member__anchor" title="Go to Murtada al Mousawy's portfolio" href="https://murtada.nl/" target="_blank" rel="noopener noreferrer">
+<!--                 <a class="member__anchor" title="Go to Murtada al Mousawy's portfolio" href="https://murtada.nl/" target="_blank" rel="noopener noreferrer">
                   <span>Visit my portfolio</span>
                   <svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg"><path d="M16 16H2V2h7V0H2a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V9h-2v7zM11 0v2h3.59l-9.83 9.83 1.41 1.41L16 3.41V7h2V0h-7z" fill="#F0834A" fill-rule="nonzero"/></svg>
-                </a>
+                </a> -->
               </div>
             </li>
-            <li class="member" role="button" tabindex="0">
+            <li class="member member--empty" role="button" tabindex="0">
               <div class="member__top">
                 <div class="member__avatar">
-                  <img src="images/avatar-gideon.jpg" alt="">
+                  <img src="" alt="">
                 </div>
-                <h1 class="member__name">Gideon <br>Heilbron 3</h1>
-                <h2 class="member__title">Front-end developer</h2>
-                <h3 class="member__tags">Flexible, creative & precise</h3>
+                <h1 class="member__name">Your face <br>here?</h1>
+                <h2 class="member__title"></h2>
+                <h3 class="member__tags"></h3>
               </div>
               <div class="member__description">
-                My specialty is bridging the gap between design and code. My framework of choice is Vue.js for writing clean and clear components, while using BEM and SCSS.
+                <p>We are always on the lookout for new members to join Cursief!</p>
+                <p>Interested? Contact us at <strong>hello@cursief.co</strong> and check out our FAQ to answer most of your questions.</p>
               </div>
               <div class="member__footer">
-                <a class="member__anchor" title="Go to Gideon Heilbron's portfolio" href="https://gideonheilbron.nl" target="_blank" rel="noopener noreferrer">
+                <!-- <a class="member__anchor" title="Go to Gideon Heilbron's portfolio" href="https://gideonheilbron.nl" target="_blank" rel="noopener noreferrer">
                   <span>Visit my portfolio</span>
                   <svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg"><path d="M16 16H2V2h7V0H2a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V9h-2v7zM11 0v2h3.59l-9.83 9.83 1.41 1.41L16 3.41V7h2V0h-7z" fill="#F0834A" fill-rule="nonzero"/></svg>
-                </a>
+                 --></a>
               </div>
             </li>
           </ul>
