feat(app): Add sourcemaps, improve build script and fix urls.

--- a/src/faq.html
+++ b/src/faq.html
@@ -21,12 +21,12 @@
   </head>
   <body>
     <div class="body-wrapper">
-      <a class="mobile-logo" href="/#home" title="Cursief web collective">
+      <a class="mobile-logo" href="/" title="Cursief web collective">
         <img src="images/logo.svg" alt="Cursief logo">
       </a>
       <header class="header header--primary">
         <div class="header__container">
-          <a class="header__logo" href="/#home" title="Cursief web collective">
+          <a class="header__logo" href="/" title="Cursief web collective">
             <img src="images/logo.svg" alt="Cursief logo">
           </a>
           <nav class="navigation">
@@ -88,14 +88,14 @@
                     <label class="faq__label" for="faq-1">Why should I become part of Cursief? <svg class="faq__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/></svg></label>
                     <div class="faq__content">
                       <p>Clients are not always looking for a single developer/designer/etc. What Cursief does is make it easier for them to find a team of people, with different skills, that work great together.</p>
-                      <p>Becoming a member is easy, we don't require stuff like signed contracts and minimum weekly/monthly working hours. Why wouldn't you want to increase the chance of getting work?</p>
+                      <p><strong>Becoming a member is easy</strong>, we don't require stuff like signed contracts and minimum weekly/monthly working hours. Why wouldn't you want to increase the chance of getting work?</p>
                     </div>
                   </li>
                   <li class="faq__item">
                     <input class="faq__toggle" id="faq-2" type="checkbox"/>
                     <label class="faq__label" for="faq-2">Are you a recruiter? <svg class="faq__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/></svg></label>
                     <div class="faq__content">
-                      <p>Absolutely not. You can call us a recruiter if you want, but the only similarity is that we want to connect companies to people looking for work. The main difference is we won't be between you and the client and we don't ask any money from either side.</p>
+                      <p><strong>Absolutely not.</strong> You can call us a recruiter if you want, but the only similarity is that we want to connect companies to people looking for work. The main difference is we won't be between you and the client and we don't ask any money from either side.</p>
                       <p>Cursief primarily got created because we got tired of recruiters not actually knowing anything about our professions, handling clients poorly and not representing our strenghts.</p>
                     </div>
                   </li>
@@ -110,7 +110,7 @@
                     <input class="faq__toggle" id="faq-4" type="checkbox"/>
                     <label class="faq__label" for="faq-4">Does this cost anything? <svg class="faq__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/></svg></label>
                     <div class="faq__content">
-                      <p>Nope! Nothing, nada!</p>
+                      <p><strong>Nope! Nothing, nada!</strong></p>
                       <p>We keep this easy and simple, so we don't have to charge anything.</p>
                     </div>
                   </li>
@@ -123,14 +123,16 @@
                     <input class="faq__toggle" id="faq-5" type="checkbox"/>
                     <label class="faq__label" for="faq-5">What is a collective? <svg class="faq__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/></svg></label>
                     <div class="faq__content">
-                      <p>A collective can also be called a 'pool', it's a fancy name for a bunch of passionate people helping each other finding work and passing along any work they don't have the time for and knowledge of. Instead of constantly having to approach different people, asking if they are available and have the required knowledge, we make it easier to find exactly what you are looking for!</p>
+                      <p>A collective can also be called a 'pool', it's a fancy name for a bunch of passionate people helping each other finding work and passing along any work they don't have the time for and knowledge of.</p>
+                      <p>Instead of constantly having to approach different people, asking if they are available and have the required knowledge, we make it easier to find exactly what you are looking for!</p>
                     </div>
                   </li>
                   <li class="faq__item">
                     <input class="faq__toggle" id="faq-6" type="checkbox"/>
                     <label class="faq__label" for="faq-6">Why shouldn't I hire everyone on my own? <svg class="faq__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/></svg></label>
                     <div class="faq__content">
-                      <p>If you want to hire everyone on your own, go ahead, no one is stopping you. Using Cursief helps to create a single point for contacting, we make sure everyone you selected is available at the same time and if necessary we can help finding some else who fits better in your team. Let us do the work!</p>
+                      <p>If you want to hire everyone on your own, go ahead, no one is stopping you.</p>
+                      <p>Using Cursief helps to create a single point for contacting, we make sure everyone you selected is available at the same time and if necessary we can help finding some else who fits better in your team. Let us do the work!</p>
                     </div>
                   </li>
                   <li class="faq__item">
