--- a/src/index.html
+++ b/src/index.html
@@ -19,12 +19,12 @@
   </head>
   <body>
     <div class="body-wrapper">
-      <a class="mobile-logo" href="#home" title="Cursief web collective">
+      <a class="mobile-logo" href="/" title="Cursief web collective">
         <img src="images/logo.svg" alt="Cursief logo">
       </a>
       <header class="header header--primary">
         <div class="header__container">
-          <a class="header__logo" href="#home" title="Cursief web collective">
+          <a class="header__logo" href="/" title="Cursief web collective">
             <img src="images/logo.svg" alt="Cursief logo">
           </a>
           <nav class="navigation">
@@ -90,7 +90,7 @@
                 <p>Cursief is a pool of web-veterans with years of experience creating websites, webshops and webapps. Being bundled under one name gives us a lot of flexibility taking on small and large projects, our members scale depending on what you need for your company and project.</p>
                 <p>You probably still have a lot of questions right? We created an FAQ to answer all your burning questions.</p>
               </div>
-              <a class="readmore" href="faq.html" title="Go to FAQ page">Visit our FAQ</a>
+              <a class="readmore" href="/faq" title="Go to FAQ page">Visit our FAQ</a>
             </div>
             <div class="section__column section__media">
               <img src="images/introduction-o.svg" alt="">
@@ -119,7 +119,7 @@
                 I'm a dedicated and loyal person, always looking for ways to improve myself and others in the process. I have a masters degree in language and culture.
               </div>
               <div class="member__footer">
-                <a class="member__anchor" title="Go to Gideon Heilbron's portfolio" href="https://gideonheilbron.nl" target="_blank" rel="noopener noreferrer">
+                <a class="member__anchor" title="Go to Gideon Heilbron's portfolio" href="https://www.linkedin.com/in/tamara-duijvestijn-6b346240/" target="_blank" rel="noopener noreferrer">
                   <span>Visit my portfolio</span>
                   <svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg"><path d="M16 16H2V2h7V0H2a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V9h-2v7zM11 0v2h3.59l-9.83 9.83 1.41 1.41L16 3.41V7h2V0h-7z" fill="#F0834A" fill-rule="nonzero"/></svg>
                 </a>
