fix(cart): Fix cart being visible while banner is visible.

--- a/src/index.html
+++ b/src/index.html
@@ -238,7 +238,7 @@
           </div>
         </section>
 
-        <div class="cart" role="switch" aria-checked="false">
+        <div class="cart is-hidden" role="switch" aria-checked="false">
           <span class="cart__label">Team</span>
           <div class="cart__amount-holder">
             <div class="cart__amount"></div>
