fix(faq): Fix a few typos.

--- a/src/faq.html
+++ b/src/faq.html
@@ -132,7 +132,7 @@
                     <label class="faq__label" for="faq-6">Why shouldn't I hire everyone on my own? <svg class="faq__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/></svg></label>
                     <div class="faq__content">
                       <p>If you want to hire everyone on your own, go ahead, no one is stopping you.</p>
-                      <p>Using Cursief helps to create a single point for contacting, we make sure everyone you selected is available at the same time and if necessary we can help finding some else who fits better in your team. Let us do the work!</p>
+                      <p>Using Cursief helps to create a single point for contacting, we make sure everyone you selected is available at the same time and if necessary we can help finding someone else who fits better in your team. Let us do the work!</p>
                     </div>
                   </li>
                   <li class="faq__item">
@@ -146,7 +146,7 @@
                     <input class="faq__toggle" id="faq-8" type="checkbox"/>
                     <label class="faq__label" for="faq-8">How does billing work? <svg class="faq__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/></svg></label>
                     <div class="faq__content">
-                      <p>We won't be between you and the Cursief member(s), they will send you seperate invoices and you'll sign seperate contract with them.</p>
+                      <p>We won't be between you and the Cursief member(s), they will send you separate invoices and you'll sign separate contract with them.</p>
                     </div>
                   </li>
                 </ul>
