fix(contact): Use mailto for mail link.

--- a/src/index.html
+++ b/src/index.html
@@ -280,7 +280,7 @@
                         </div>
                         <div class="selection-box__seperator">OR</div>
                         <div class="selection-box__column">
-                          <a href="/email">Mail us at: <span>hello@cursief.co</span></a>
+                          <a href="mailto:hello@cursief.co">Mail us at: <span>hello@cursief.co</span></a>
                         </div>
                       </div>
                     </div>
