fix(banner): Fix banner line under banner on some viewport heights.

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cursief. Digital agency, but better. Front-end, back-end & web design.</title>
+    <title>Cursief | Digital agency, but better. Front-end, back-end & web design</title>
     <meta name="description" content="Need a digital agency? We are a collective with webdesigners, front-end developers and back-end developers. Like a creative agency, we create websites and webapps.">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Cursief - Web design & development collective.">
@@ -36,7 +36,7 @@
                 <a class="navigation__anchor" href="#members">Members</a>
               </li>
               <li class="navigation__item">
-                <a class="navigation__anchor" href="#clients">Clients &amp; Projects</a>
+                <a class="navigation__anchor" href="#clients">Clients & Projects</a>
               </li>
               <li class="navigation__item">
                 <a class="navigation__anchor" href="#contact">Contact us</a>
@@ -231,7 +231,7 @@
               </ul>
             </div>
             <div class="section__column">
-              <h1>Clients &amp; Projects</h1>
+              <h1>Clients & Projects</h1>
               <p class="section__description">Members of Cursief have worked for a wide range of clients in a bunch of different sectors. Big, small, start-up, enterprise, everything is possible.</p>
               <a class="readmore" title="View a few cases from our members" href="#">View some cases</a>
             </div>
