--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
                 <img src="images/icon-github.svg" alt="">
               </a>
             </li>
-  <!--           <li class="social-item">
+            <!-- <li class="social-item">
               <a class="social-item__anchor" href="#" target="_blank" rel="noopener noreferrer" title="Go to our Dribbble page">
                 <img src="images/icon-dribbble.svg" alt="">
               </a>
@@ -78,7 +78,7 @@
             </div>
             <div class="banner__content">
               <p>We design, build and launch products for startups, established companies and ourselves. We help businesses grow through effective design and strategy. We live and breath the web. Let’s create some great things together!</p>
-              <a class="button button--secondary" href="#">Contact us</a>
+              <a class="button button--secondary" href="#contact">Contact us</a>
             </div>
           </div>
         </section>
@@ -177,7 +177,7 @@
                 <p>Interested? Contact us at <strong>hello@cursief.co</strong> and check out our FAQ to answer most of your questions.</p>
               </div>
               <div class="member__footer">
-<!--                 <a class="member__anchor" title="Go to Murtada al Mousawy's portfolio" href="https://murtada.nl/" target="_blank" rel="noopener noreferrer">
+                <!-- <a class="member__anchor" title="Go to Murtada al Mousawy's portfolio" href="https://murtada.nl/" target="_blank" rel="noopener noreferrer">
                   <span>Visit my portfolio</span>
                   <svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg"><path d="M16 16H2V2h7V0H2a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V9h-2v7zM11 0v2h3.59l-9.83 9.83 1.41 1.41L16 3.41V7h2V0h-7z" fill="#F0834A" fill-rule="nonzero"/></svg>
                 </a> -->
