fix(home): Remove unused button and fix contact anchor.
fix(contact): Remove pointer events on stamps.

--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,7 @@
             </div>
             <div class="banner__content">
               <p>We design, build and launch products for startups, established companies and ourselves. We help businesses grow through effective design and strategy. We live and breath the web. Let’s create some great things together!</p>
-              <a class="button button--secondary" href="#">Contact us</a>
+              <a class="button button--secondary" href="#contact">Contact us</a>
             </div>
           </div>
         </section>
@@ -233,7 +233,7 @@
             <div class="section__column">
               <h1>Clients & Projects</h1>
               <p class="section__description">Members of Cursief have worked for a wide range of clients in a bunch of different sectors. Big, small, start-up, enterprise, everything is possible.</p>
-              <a class="readmore" title="View a few cases from our members" href="#">View some cases</a>
+              <!-- <a class="readmore" title="View a few cases from our members" href="#">View some cases</a> -->
             </div>
           </div>
         </section>
