feat(app): Add GA.

--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-89810840-3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-89810840-3');
+    </script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Cursief | Digital agency, but better. Front-end, back-end & web design</title>
     <meta name="description" content="Need a digital agency? We are a collective with webdesigners, front-end developers and back-end developers. Like a creative agency, we create websites and webapps.">
     <meta property="og:type" content="website">
@@ -14,6 +25,7 @@
     <meta name="geo.region" content="NL-ZH">
     <meta name="geo.placename" content="Rotterdam">
     <meta name="geo.position" content="51.9228958;4.4631727">
+
     <link rel="stylesheet" href="https://use.typekit.net/bzx4plp.css">
     <link rel="stylesheet" href="style.css">
   </head>
