fix(contact): Add 'delivering' message with throbber when submitting and fix issue with posting form.

--- a/src/index.html
+++ b/src/index.html
@@ -412,7 +412,9 @@
 
                     <div class="team-overview-end"></div>
 
-                    <div class="button button--primary submit-button is-hidden">Submit</div>
+                    <div class="submit-button-holder">
+                      <button class="button button--primary submit-button"><span>Submit</span><span>Delivering...</span></button><div class="throbber"></div>
+                    </div>
                   </div>
                 </div>
 
