fix(members): Fix missing anchor border-radius.
fix(header): Increase height.
feat(footer): Add navigation.
fix(cart): Add close text + icon.
fix(button): Add a little gradient to button.

--- a/src/faq.html
+++ b/src/faq.html
@@ -49,7 +49,7 @@
           <a class="header__logo" href="/" title="Cursief web collective">
             <img src="images/logo.svg" alt="Cursief logo">
           </a>
-          <nav class="navigation">
+          <nav class="navigation navigation--primary">
             <ul class="navigation__list">
               <li class="navigation__item">
                 <a class="navigation__anchor" href="/#introduction">Introduction</a>
@@ -179,6 +179,13 @@
       <footer class="footer footer--primary">
         <div class="footer__container">
           <span>&copy; 2019 Cursief. All rights reserved.</span>
+          <div class="navigation navigation--footer">
+            <ul class="navigation__list">
+              <li class="navigation__item">
+                <a class="navigation__anchor" href="/faq" title="Visit our FAQ page">FAQ</a>
+              </li>
+            </ul>
+          </div>
           <ul class="social social--footer">
             <li class="social-item">
               <a class="social-item__anchor" href="https://twitter.com/cursief_hq" target="_blank" rel="noopener noreferrer" title="Go to our Twitter profile">
