--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
           <a class="header__logo" href="/" title="Cursief web collective">
             <img src="images/logo.svg" alt="Cursief logo">
           </a>
-          <nav class="navigation">
+          <nav class="navigation navigation--primary">
             <ul class="navigation__list">
               <li class="navigation__item">
                 <a class="navigation__anchor" href="#introduction">Introduction</a>
@@ -261,13 +261,16 @@
         </section>
 
         <div class="cart is-hidden" role="switch" aria-checked="false">
-          <span class="cart__label">Team</span>
-          <div class="cart__amount-holder">
-            <div class="cart__amount"></div>
+          <div class="cart__label">
+            <span>Team</span>
+            <div class="cart__amount-holder">
+              <div class="cart__amount"></div>
+            </div>
           </div>
           <div class="cart__content-holder">
             <div class="cart-content"></div>
           </div>
+          <div class="cart__close">close</div>
         </div>
 
         <section class="section section--contact" id="contact">
@@ -449,6 +452,13 @@
       <footer class="footer footer--primary">
         <div class="footer__container">
           <span>&copy; 2019 Cursief. All rights reserved.</span>
+          <div class="navigation navigation--footer">
+            <ul class="navigation__list">
+              <li class="navigation__item">
+                <a class="navigation__anchor" href="/faq" title="Visit our FAQ page">FAQ</a>
+              </li>
+            </ul>
+          </div>
           <ul class="social social--footer">
             <li class="social-item">
               <a class="social-item__anchor" href="https://twitter.com/cursief_hq" target="_blank" rel="noopener noreferrer" title="Go to our Twitter profile">
